# zscaler

./: .gitignore  LICENSE  README.md  k3s_with_cilium.md  zpa_app_connector.md  zpa_private_service_edge.md  zscaler_gre_tunnels.md  zscaler_pra.md  zscaler_source_ip_anchoring_sipa.md
ansible/: README.md  ansible.cfg  devbox.json  pyproject.toml  requirements.yaml
ansible/inventory/host_vars/localhost/: zscaler.yaml  zscaler_provider.yaml  zscaler_vars.yaml
ansible/playbooks/zia/: zia.yaml
ansible/playbooks/zpa/: zpa.yaml  zpa_roles.yaml
ansible/roles/zscaler_zpa/zpa_app_connector_group_info/meta/: main.yaml
ansible/roles/zscaler_zpa/zpa_app_connector_group_info/tasks/: main.yaml
ansible/roles/zscaler_zpa/zpa_application_segment/defaults/: main.yaml
ansible/roles/zscaler_zpa/zpa_application_segment/meta/: main.yaml
ansible/roles/zscaler_zpa/zpa_application_segment/tasks/: main.yaml
ansible/roles/zscaler_zpa/zpa_segment_group/defaults/: main.yaml
ansible/roles/zscaler_zpa/zpa_segment_group/meta/: main.yaml
ansible/roles/zscaler_zpa/zpa_segment_group/tasks/: main.yaml
ansible/roles/zscaler_zpa/zpa_segment_group_info/meta/: main.yaml
ansible/roles/zscaler_zpa/zpa_segment_group_info/tasks/: main.yaml
ansible/roles/zscaler_zpa/zpa_server_group/defaults/: main.yaml
ansible/roles/zscaler_zpa/zpa_server_group/meta/: main.yaml
ansible/roles/zscaler_zpa/zpa_server_group/tasks/: main.yaml
ansible/roles/zscaler_zpa/zpa_server_group_info/defaults/: main.yaml
ansible/zia/: zia_custom_url_categories.yaml
(+2 files in other folders)
