[tool.poetry]
name = "Zscaler automation with Ansible"
version = "1.0"
description = "Collection of Ansible playbooks for Zscaler ZIA and ZPA"
authors = ["Bjorn-Vegar Borge <bvborge@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "~2.18"
ansible-lint = {version = "~24", markers = "platform_system !='Windows'"}
ansible-pylibssh = "~1"
dnspython = "~2"
jmespath = "~1"
jsondiff = "~2"
ncclient = "~0"
ntc-templates = "~7"
packaging = "~23"
paramiko = "~3"
passlib = "~1"
requests = "~2"
requests_toolbelt = "~1"
xmltodict = "~0"
zscaler-sdk-python = "~1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
